--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         nav {
             display: flex;
             justify-content: center;
-            background-color: #b58bff;
+            background-color: #FFA598;
             padding: 0.5em 0;
         }
         nav a {
@@ -40,7 +40,7 @@
             margin: auto;
         }
         footer {
-            background-color: #d3a4ff;
+            background-color: #FCD3CD;
             color: white;
             text-align: center;
             padding: 1em 0;
