--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #d3a4ff;
+            background-color: #FCD3CD;
             color: white;
             padding: 1em 0;
             text-align: center;
