--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kary Crafts</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: glacial indifference, sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f8f8f8;
